// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserRoleFunctionTabComponent Change Company Role 1`] = `
<pf-user-role-function-tab
  companyRolePermissionService={[Function CompanyRolePermissionService]}
  currentRole={[Function Object]}
  currentRoleSubscription={[Function Subscriber]}
  saveButtonText$={[Function String]}
  store={[Function Store]}
>
  <div>
    <div
      class="scrollable"
    >
      <ul
        class="list-group nav"
      >
        
        <li
          class="nav-item parentPermission"
          ng-reflect-klass="nav-item"
          ng-reflect-ng-class="parentPermission"
        >
          <input
            type="checkbox"
          />
           Parent Permission 
        </li>
        <li
          class="nav-item parentPermission"
          ng-reflect-klass="nav-item"
          ng-reflect-ng-class="parentPermission"
        >
          <input
            type="checkbox"
          />
           Sub1 Permission 
        </li>
        <li
          class="nav-item parentPermission"
          ng-reflect-klass="nav-item"
          ng-reflect-ng-class="parentPermission"
        >
          <input
            type="checkbox"
          />
           Sub2 Permission 
        </li>
      </ul>
    </div>
    
    <button
      class="btn btn-primary"
      type="button"
    >
      Save
    </button>
  </div>
</pf-user-role-function-tab>
`;

exports[`UserRoleFunctionTabComponent Check parents checkbox 1`] = `
<pf-user-role-function-tab
  companyRolePermissionService={[Function CompanyRolePermissionService]}
  currentRole={[Function Object]}
  currentRoleSubscription={[Function Subscriber]}
  saveButtonText={[Function String]}
  store={[Function Store]}
>
  <div>
    <div
      class="scrollable"
    >
      <ul
        class="list-group nav"
      >
        
        <li
          class="nav-item parentPermission"
          ng-reflect-klass="nav-item"
          ng-reflect-ng-class="parentPermission"
        >
          <input
            type="checkbox"
          />
           Parent Permission 
        </li>
        <li
          class="nav-item parentPermission"
          ng-reflect-klass="nav-item"
          ng-reflect-ng-class="parentPermission"
        >
          <input
            type="checkbox"
          />
           Sub1 Permission 
        </li>
        <li
          class="nav-item parentPermission"
          ng-reflect-klass="nav-item"
          ng-reflect-ng-class="parentPermission"
        >
          <input
            type="checkbox"
          />
           Sub2 Permission 
        </li>
      </ul>
    </div>
    
    <button
      class="btn btn-primary"
      type="button"
    >
      Save
    </button>
  </div>
</pf-user-role-function-tab>
`;

exports[`UserRoleFunctionTabComponent Page load 1`] = `
<pf-user-role-function-tab
  companyRolePermissionService={[Function CompanyRolePermissionService]}
  currentRole={[Function Object]}
  currentRoleSubscription={[Function Subscriber]}
  saveButtonText={[Function String]}
  store={[Function Store]}
>
  <div>
    <div
      class="scrollable"
    >
      <ul
        class="list-group nav"
      >
        
        <li
          class="nav-item parentPermission"
          ng-reflect-klass="nav-item"
          ng-reflect-ng-class="parentPermission"
        >
          <input
            type="checkbox"
          />
           Parent Permission 
        </li>
        <li
          class="nav-item parentPermission"
          ng-reflect-klass="nav-item"
          ng-reflect-ng-class="parentPermission"
        >
          <input
            type="checkbox"
          />
           Sub1 Permission 
        </li>
        <li
          class="nav-item parentPermission"
          ng-reflect-klass="nav-item"
          ng-reflect-ng-class="parentPermission"
        >
          <input
            type="checkbox"
          />
           Sub2 Permission 
        </li>
      </ul>
    </div>
    
    <button
      class="btn btn-primary"
      type="button"
    >
      Save
    </button>
  </div>
</pf-user-role-function-tab>
`;

exports[`UserRoleFunctionTabComponent Save Changes 1`] = `
<pf-user-role-function-tab
  companyRolePermissionService={[Function CompanyRolePermissionService]}
  currentRole={[Function Object]}
  currentRoleSubscription={[Function Subscriber]}
  saveButtonText={[Function String]}
  store={[Function Store]}
>
  
</pf-user-role-function-tab>
`;
